...
            android:fontFamily="@font/inter"
            android:textColor="#990101"
            android:textSize="24sp" />
    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/header"
        android:layout_above="@id/bottomNavigationView"
        app:cameraZoom="16"
        app:uiZoomControls="true"
        app:uiRotateGestures="true"
        app:mapType="terrain" />
    <Button
        android:id="@+id/addEventButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomNavigationView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="Add Event"
...
