<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >

    <!-- Title -->
    <ImageButton
        android:id="@+id/eventCloseButton"
        android:layout_width="14dp"
        android:layout_height="wrap_content"
        android:src="@drawable/x"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        app:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/addNewEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Add New Event"
        android:textSize="36sp"
        android:textColor="#a72828"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Event Detail Forms -->
    <TextView
        android:id="@+id/eventText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:text="Event Name"
        android:textSize="15dp"
        android:layout_marginTop="30dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewEvent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventText"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEventName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter Event Name"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/LocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:text="Location"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LocationText"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter Location"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/DateText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Date"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventDate"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateText"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEventDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter Date.."
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/TimeText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="Time"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/DateText"
        app:layout_constraintTop_toBottomOf="@+id/location"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventTime"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventDate"
        app:layout_constraintTop_toBottomOf="@+id/TimeText"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEventTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="hh:mm"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/DetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:text="Details"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTime"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DetailsText"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter Details"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/DetailsSubtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:text="Max 150 Characters"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Details"
        />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:text="Create Event"
        android:gravity="center"
        android:backgroundTint="#a72828"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/DetailsSubtext"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/createEventButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemIconTint="@color/usc_red"
        app:itemTextColor="@color/usc_red"
        app:itemRippleColor="@android:color/transparent"
        app:itemBackground="@android:color/transparent"
        app:menu="@menu/bottom_nav_menu" />






</androidx.constraintlayout.widget.ConstraintLayout>