<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/discover"
        android:title="Discover"
        android:icon="@drawable/map"
        />
    <item
        android:id="@+id/logout"
        android:title="Logout"
        android:icon="@drawable/user"
        />
</menu>