<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/commentsMain"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:paddingVertical="25dp"
    android:paddingHorizontal="16dp"
    android:elevation="8dp">

    <!-- Down Arrow Icon -->
    <ImageButton
        android:id="@+id/closeCommentsButton"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:src="@drawable/down_arrow"
        android:padding="0dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Comments Title -->
    <TextView
        android:id="@+id/commentsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comments"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/closeCommentsButton" />

    <!-- RecyclerView for Comments List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/commentsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentTextInput"
        android:layout_width="300dp"
        android:gravity="left"
        android:layout_height="wrap_content"        android:background="@color/white"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintBottom_toBottomOf="@+id/commentsMain"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Write a Comment.."
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/commentSubmitButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/arrow_up"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle_bg"
        android:padding="10dp"
        android:backgroundTint="@color/usc_red"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@+id/commentTextInput"
        app:layout_constraintTop_toTopOf="@+id/commentTextInput"
        app:layout_constraintBottom_toBottomOf="@+id/commentTextInput"

        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
