...
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:padding="16dp"
    tools:context=".Event">

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Event Title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
...

    <ImageView
        android:id="@+id/routeMeIcon"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:src="@drawable/map"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/routeMeButton" />

    <Button
        android:id="@+id/routeMeButton"
        android:layout_width="wrap_content"
...
